ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
spec:
  ingressClassName: nginx
  rules:
  - host: springboot.example.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: springapp
            port:
              number: 80

  - host: maven.example.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: maven
            port:
              number: 80
